--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,30 @@
 </head>
 <body>
   <script>
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "firebase/app";
+    import { getAnalytics } from "firebase/analytics";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyCyKuJQ9eK2OlCv60aPoYlXD0lX-GcyKfk",
+      authDomain: "credix-be37c.firebaseapp.com",
+      databaseURL: "https://credix-be37c-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "credix-be37c",
+      storageBucket: "credix-be37c.appspot.com",
+      messagingSenderId: "198559573731",
+      appId: "1:198559573731:web:69aaa8c37c77a8410d07d6",
+      measurementId: "G-9G1N146P4W"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+
+
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
