--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
     <base href="$FLUTTER_BASE_HREF" />
+    <meta name="google-signin-client_id" content="923353288943-c3dau9octh3ge09fh1aqb6668vvst291.apps.googleusercontent.com">
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -41,6 +42,7 @@
   </head>
   <body>
 <script type="module">
+
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
   import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-analytics.js";
